--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "Galin Marinov",
   "license": "MIT",
@@ -20,6 +21,10 @@
     "mongoose": "^8.3.4",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7"
+  },
+  "engine": {
+    "node": "20.10.0",
+    "npm": "10.2.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
