--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "author": "Galin Marinov",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.9.13",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "twitter": "^1.7.1"
   },
   "engine": {
     "node": "20.10.0",
