--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
+    "telegram": "^2.21.2",
     "twitter": "^1.7.1"
   },
   "engine": {
